Feat: 통합 테스트를 위한 라우트 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,12 @@ spring:
           predicates:
             - Path=/test/**        # 원하는 경로로 매핑
 
+        # similarity 라우트 추가
+        - id: similarity
+          uri: lb://similarity
+          predicates:
+            - Path=/api/similarity/**
+
 eureka:
   client:
     service-url:
