--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,11 @@ spring:
           predicates:
             - Path=/api/similarity/**
 
+        - id: parsing
+          uri: lb://parsing
+          predicates:
+            - Path=/api/parse/**
+
 eureka:
   client:
     service-url:
