Feat: dashboard service로의 라우팅 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,6 +30,11 @@ spring:
           predicates:
             - Path=/api/submit/**
 
+        - id: dashboard
+          uri: lb://dashboard
+          predicates:
+            - Path=/api/dashboard/**
+
 
 eureka:
   client:
