--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,42 +6,47 @@ spring:
   application:
     name: gateway
   cloud:
+    discovery:
+      enabled: false
     gateway:
       routes:
-        - id: gateway-test
-          uri: lb://gateway-test  # Eureka에 등록된 서비스 이름
-          predicates:
-            - Path=/test/**        # 원하는 경로로 매핑
-
         # similarity 서비스 라우트
         - id: similarity
-          uri: lb://similarity
+          uri: http://similarity.codify.svc.cluster.local
           predicates:
             - Path=/api/similarity/**
 
         - id: parsing
-          uri: lb://parsing
+          uri: http://parsing.codify.svc.cluster.local
           predicates:
             - Path=/api/parse/**
             
         # submit 서비스 라우트
         - id: submit
-          uri: lb://submit
+          uri: http://submit.codify.svc.cluster.local
           predicates:
             - Path=/api/submit/**
 
         - id: dashboard
-          uri: lb://dashboard
+          uri: http://dashboard.codify.svc.cluster.local
           predicates:
             - Path=/api/dashboard/**
 
 
-eureka:
-  client:
-    service-url:
-      defaultZone: ${EUREKA_SERVER_URL:http://localhost:8761/eureka}
-    fetch-registry: true
-    register-with-eureka: true
 
-  instance:
-    prefer-ip-address: true
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,prometheus
+        exclude: env,configprops,heapdump
+  endpoint:
+    health:
+      probes:
+        enabled: true
+      show-details: always
+  health:
+    livenessstate:
+      enabled: true
+    readinessstate:
+      enabled: true
