--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     //health check
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
+    //prometheus
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+
 }
 
 dependencyManagement {
