--- a/.github/workflows/deploy-k8s.yml
+++ b/.github/workflows/deploy-k8s.yml
@@ -75,6 +75,6 @@ jobs:
           if git diff-index --quiet HEAD; then
             echo "No changes to commit."
           else
-            git commit -m "CI: Update gateway image to ${{ needs.build-and-push.outputs.image_tag }}"
+            git commit -m "Deploy: Update gateway image to ${{ needs.build-and-push.outputs.image_tag }}"
             git push
           fi
