--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,23 +12,23 @@ spring:
       routes:
         # similarity 서비스 라우트
         - id: similarity
-          uri: http://similarity.codify.svc.cluster.local
+          uri: http://codify-similarity.codify.svc.cluster.local
           predicates:
             - Path=/api/similarity/**
 
         - id: parsing
-          uri: http://parsing.codify.svc.cluster.local
+          uri: http://codifyparsing.codify.svc.cluster.local
           predicates:
             - Path=/api/parse/**
             
         # submit 서비스 라우트
         - id: submit
-          uri: http://submit.codify.svc.cluster.local
+          uri: http://codify-submit.codify.svc.cluster.local
           predicates:
             - Path=/api/submit/**
 
         - id: dashboard
-          uri: http://dashboard.codify.svc.cluster.local
+          uri: http://codify-dashboard.codify.svc.cluster.local
           predicates:
             - Path=/api/dashboard/**
 
