--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
             - Path=/api/similarity/**
 
         - id: parsing
-          uri: http://codifyparsing.codify.svc.cluster.local
+          uri: http://codify-parsing.codify.svc.cluster.local
           predicates:
             - Path=/api/parse/**
             
