Feat: result service로의 라우팅 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,6 +41,12 @@ spring:
           predicates:
             - Path=/api/upload/**
 
+        # result 서비스 라우트
+        - id: result
+          uri: lb://result
+          predicates:
+            - Path=/api/result/**
+
 
 eureka:
   client:
